# Navigazione

./: README.md  kalman.cpp
MATLAB scripts/: EKF.m  diff_matrix_by_vector.m  jacobian1.m  jacobian2.m  skew_product.m
MATLAB scripts/funzioni matlab prof/: ProvaCosty.cpp
nav_pkg/: CMakeLists.txt  package.xml
nav_pkg/config/: mission.yaml
nav_pkg/include/nav_pkg/: eigenmvn.h  geolib.h  math_utility.h  sensor_class.h  sensor_utility.h
nav_pkg/launch/: KalNav.launch  KalNav_int.launch  Waypoint.launch  debug2.launch  perf_3pkg.launch  performance.launch  performance2.launch  pf.launch
nav_pkg/msg/: Odom.msg  ahrs.msg  depth.msg  gps.msg  imu.msg  nav_error.msg  usbl.msg
nav_pkg/src/: EKF.cpp  PF.cpp  fake_modellazione.cpp  math_utility.h  performance_analysis.cpp  prova.cpp  prova2.cpp  sensor_utility.h  test_msg.cpp
ver01_06/modellazione/: package.xml
ver01_06/modellazione/launch/: modellazione.launch
ver01_06/modellazione/msg/: state_real.msg  usbl.msg
ver01_06/modellazione/src/: constant.h  dvl.cpp  fake_control.cpp  gps.cpp  math_utility.h  sensor_utility.h  usbl.cpp
ver01_06/nav_pkg/config/: mission.yaml
ver01_06/nav_pkg/include/nav_pkg/: math_utility.h  sensor_class.h
ver01_06/nav_pkg/launch/: debug_serio.launch
ver01_06/nav_pkg/src/: EKF.cpp  performance_analysis.cpp
ver02_06/modellazione/msg/: dvl.msg  gps.msg  tau.msg
ver02_06/modellazione/src/: ahrs.cpp  depth.cpp  fake_control.cpp  fake_nav.cpp  model.cpp
ver02_06/nav_pkg/include/nav_pkg/: math_utility.h  sensor_class.h
ver02_06/nav_pkg/src/: EKF.cpp  PF.cpp  fake_modellazione.cpp  performance_analysis.cpp  prova.cpp
ver_02_06/modellazione/launch/: modellazione.launch
ver_02_06/nav_pkg/include/nav_pkg/: math_utility.h  sensor_class.h
ver_02_06/nav_pkg/launch/: debug_serio.launch
ver_02_06/nav_pkg/src/: EKF.cpp
